# webify-server

./: .gitignore  CMakeLists.txt  README.md
cmake/: windows-cross.cmake
driver/: CMakeLists.txt  Driver.cpp  Driver.h  Trace.h  WebifyVDD.inf
include/: desktop_manager.h  encoder.h  input_handler.h  jpeg_encoder.h  screen_capture.h  signaling_server.h  vdd_capture.h  ws_server.h
src/: client_html.h  desktop_manager.cpp  encoder.cpp  input_handler.cpp  jpeg_encoder.cpp  main.cpp  screen_capture.cpp  signaling_server.cpp  vdd_capture.cpp  ws_server.cpp
test/: demo_app.cpp  test_desktop.cpp  test_window.cpp
